Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122676

weatherforecast example: ASSERT crash when running on Raspberry Pi OS (debian 11 derivative), arm64

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.0 RC, 6.8.0 FF
    • 6.8
    • Quick: Shapes
    • None
    • 9bdc993d2 (dev), 20a769f46 (6.7)

      On the Raspberry Pi:

      $ cd ~/Desktop/weatherforecast
      $ ./weatherforecastexample 
      ASSERT: "n.pt1() == QPoint() && qFuzzyIsNull(float(n.pt4().y()))" in file /home/builder/qt5-git/qtdeclarative/src/quick/scenegraph/util/qquadpath.cpp, line 104
      

      Running it under gdb, I get the following backtrace:

      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x0000007ff5aadaa0 in __GI_abort () at abort.c:79
      #2  0x0000007ff61e0d58 in QInternal::registerCallback(QInternal::Callback, bool (*)(void**)) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #3  0x0000007ff61e5394 in qt_message(QtMsgType, QMessageLogContext const&, char const*, std::__va_list) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #4  0x0000007ff61e9a38 in QMessageLogger::fatal(char const*, ...) const () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #5  0x0000007ff61e07c8 in qt_assert_x(char const*, char const*, char const*, int) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #6  0x0000007ff7d5b9b0 in QQuadPath::fromPainterPath(QPainterPath const&, QFlags<QQuadPath::PathHint>) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #7  0x0000007fe9d869fc in QQuickShapeCurveRenderer::processPath(QQuickShapeCurveRenderer::PathData*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/qml/QtQuick/Shapes/../../../lib/libQt6QuickShapes.so.6
      #8  0x0000007fe9d864c8 in QQuickShapeCurveRunnable::run() () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/qml/QtQuick/Shapes/../../../lib/libQt6QuickShapes.so.6
      #9  0x0000007fe9d861b0 in QQuickShapeCurveRenderer::endSync(bool) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/qml/QtQuick/Shapes/../../../lib/libQt6QuickShapes.so.6
      #10 0x0000007fe9d719d8 in QQuickShapePrivate::sync() () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/qml/QtQuick/Shapes/../../../lib/libQt6QuickShapes.so.6
      #11 0x0000007ff7c8c748 in QQuickWindowPrivate::polishItems() () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #12 0x0000007ff7e6f43c in QSGThreadedRenderLoop::polishAndSync(QSGThreadedRenderLoop::Window*, bool) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #13 0x0000007ff7e6f07c in QSGThreadedRenderLoop::handleExposure(QQuickWindow*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #14 0x0000007ff7e6e968 in QSGThreadedRenderLoop::exposureChanged(QQuickWindow*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #15 0x0000007ff71eb51c in QWindow::event(QEvent*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Gui.so.6
      #16 0x0000007ff7c90968 in QQuickWindow::event(QEvent*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #17 0x0000007ff7ca0d2c in QQuickWindowQmlImpl::event(QEvent*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Quick.so.6
      #18 0x0000007ff625308c in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #19 0x0000007ff7190688 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Gui.so.6
      #20 0x0000007ff71f27b8 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Gui.so.6
      #21 0x0000007ff2aaa1b4 in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/plugins/platforms/../../lib/libQt6XcbQpa.so.6
      #22 0x0000007ff58e1bc8 in g_main_context_dispatch () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
      #23 0x0000007ff58e1e5c in  () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
      #24 0x0000007ff58e1f24 in g_main_context_iteration () at /lib/aarch64-linux-gnu/libglib-2.0.so.0
      #25 0x0000007ff64c4940 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #26 0x0000007ff625f4a0 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #27 0x0000007ff62538ac in QCoreApplication::exec() () at /home/builder/dest/qt6-dev-debug-20240222-b6710342-RPiOS_11_arm64/lib/libQt6Core.so.6
      #28 0x00000055555625fc in main ()
      

        For Gerrit Dashboard: QTBUG-122676
        # Subject Branch Project Status CR V

            vgt Eirik Aavitsland
            jimis Dimitrios Apostolou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes